setting assets and index html modified

--- a/index.html
+++ b/index.html
@@ -16,18 +16,63 @@
 
 <body class="bg-dark bg-gradient" data-bs-theme="dark">
 
-    <header>
-        <h1>Alexander Maverick Gutiérrez Ulloa</h1>
+    <!-- navbar style -->
+    <nav class="navbar sticky-top navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand fs-4 fw-semibold text-light ps-2" href="#">Alexander's Resume</a>
+            <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link fw-light text-white item-text" href="#scrollspyHeading1">Sobre mí</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-light text-white" href="#scrollspyHeading2">Portafolios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-light text-white" href="#scrollspyHeading3">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link fw-light text-white" href="#curriculum-heading">Curriculum</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- header -->
+
+    <header class="header">
+        <img src="assets/img/navBarItMechanical.jpg" class="img-fluid backgroundImgSettings"
+            alt="background header img">
+        <div class="container text-left mr-5 ">
+            <div class="row">
+                <div class="col-6">
+                    <img id="profile-picture" src="/assets/img/pictureProfile.jpg" alt="resume profile picture"></img>
+                </div>
+                <div class="col">
+                    <h1>Alexander Maverick Gutiérrez Ulloa</h1>
+                    <div class="col mt-5">
+                        <h2>Ingeniero Mecánico en mantenimiento Industrial</h2>
+                        <h4>Estudiante JavaScript FullStack</h4>
+                        <p>Experiencia en empresas B2B y B2C, operaciones, planificación, logística, mantenimiento
+                            preventivo/correctivo
+                            de
+                            equipos móviles y estacionarios. En
+                            busca del desarrollo continuo.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <section>
         <div id="border-headbox">
-            <h2>Ingeniero Mecánico en mantenimiento Industrial</h2>
-            <p>Experiencia en empresas B2B y B2C, operaciones, planificación, logística, mantenimiento
-                preventivo/correctivo
-                de
-                equipos móviles y estacionarios. En
-                busca del desarrollo continuo.
-            </p>
-            <img id="profile-picture" src="/assets/imgs/foto-cv.jpg" alt="foto de perfil de un curriculum" width="125"
-                height="125"></img>
         </div>
 
         <div>
@@ -39,10 +84,10 @@
                 <i class="fa-brands fa-linkedin text-primary"></i>
                 <br>
                 <a href="/portafolio.html">Portafolio</a>
-
         </div>
-    </header>
+    </section>
 
+    <div class="line mt-3 mb-3 "></div>
 
     <h2>EXPERIENCIA LABORAL </h2>
 
