--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="bg-dark bg-gradient" data-bs-theme="dark">
 
     <!-- navbar style -->
-    <nav class="navbar sticky-top navbar-expand-lg bg-dark">
+    <nav class="navbar sticky-top navbar-expand-lg bg-black bg-gradient">
         <div class="container-fluid">
             <a class="navbar-brand fs-4 fw-semibold text-light ps-2" href="#">Alexander's Resume</a>
             <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse"
@@ -28,34 +28,42 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link fw-light text-white item-text" href="#scrollspyHeading1">Sobre mí</a>
+                        <a class="nav-link fw-light text-white item-text" href="#aboutLink">Sobre mí</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-light text-white" href="#scrollspyHeading2">Portafolios</a>
+                        <a class="nav-link fw-light text-white" href="#briefcaseLink">Portafolios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-light text-white" href="#scrollspyHeading3">Contacto</a>
+                        <a class="nav-link fw-light text-white" href="#contacLink">Contacto</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-light text-white" href="#curriculum-heading">Curriculum</a>
+                        <a class="nav-link fw-light text-white" href="#resumeLink">Curriculum</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <!-- header -->
 
     <header class="header">
         <img src="assets/img/navBarItMechanical.jpg" class="img-fluid backgroundImgSettings"
             alt="background header img">
-        <div class="container text-left mr-5 ">
-            <div class="row">
-                <div class="col-6">
+        <div class="container text-start mr-5 m-0 ">
+            <div class="row ">
+                <div class="col ">
                     <img id="profile-picture" src="/assets/img/pictureProfile.jpg" alt="resume profile picture"></img>
                 </div>
-                <div class="col">
+            </div>
+        </div>
+    </header>
+    <div class=" separatorLine mt-1 mb-3 "></div>
+    <div>
+        <div class="container text-start m-0 p-5 ">
+            <div class="row">
+                <div class="col-6 ">
                     <h1>Alexander Maverick Gutiérrez Ulloa</h1>
-                    <div class="col mt-5">
+                    <div class="col mt-5 pr">
                         <h2>Ingeniero Mecánico en mantenimiento Industrial</h2>
                         <h4>Estudiante JavaScript FullStack</h4>
                         <p>Experiencia en empresas B2B y B2C, operaciones, planificación, logística, mantenimiento
@@ -66,186 +74,208 @@
                         </p>
                     </div>
                 </div>
+                <div class="col "></div>
+                <div class="col-4 pt-5 ">
+                    <div class="text-start p-4 ml-5">
+                        <div class="p-1 contact">
+                            <i class="fa-solid fa-location-dot"></i> Antofagasta, Chile
+                        </div>
+                        <div class="p-1 contact">
+                            <i class="fa-solid fa-envelope"></i> amaverick.gutierrez@gmail.com
+                        </div>
+                        <div class="p-1 contact">
+                            <i class="fa fa-whatsapp" aria-hidden="true"> <a href=""></a></i> +56-958740289
+                        </div>
+                        <div class="p-1 contact">
+                            <i class="fa-solid fa-user"></i> 27 años
+                        </div>
+                        <div class="p-1 contact">
+                            <i class="fa-brands fa-linkedin text-primary"></i>
+                            <a id="linkStyle" class="contact"
+                                href="https://www.linkedin.com/in/alexander-maverick-gutierrez-ulloa-812641181/"
+                                target="_blank" rel="noopener noreferrer">Linkedin</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-    </header>
-
-
-    <section>
-        <div id="border-headbox">
-        </div>
-
-        <div>
-            <p>Correo: amaverick.gutierrez@gmail.com</p>
-            <p>Ubicación: Antofagasta, Chile</p>
-            <p>Contacto: +56-958740289</p>
-            <a href="https://www.linkedin.com/in/alexander-maverick-gutierrez-ulloa-812641181/" target="_blank"
-                rel="noopener noreferrer">
-                <i class="fa-brands fa-linkedin text-primary"></i>
-                <br>
-                <a href="/portafolio.html">Portafolio</a>
-        </div>
-    </section>
-
-    <div class="line mt-3 mb-3 "></div>
-
-    <h2>EXPERIENCIA LABORAL </h2>
-
-    <div>
-        <h3>Asistente Otec</h3>
-        <h4>MPM</h4>
-        <p>11/2023 - Presente</p>
-        <ul>
-            <li>Desarrollo de app para reportabilidad de actividades, en appsheet no-code y soporte de aplicación.</li>
-            <li>Reportabilidad de HH's, entrega de programa de actividades y avances semanal de proyecto</li>
-            <li>Monitoreo de insumos y repuestos</li>
-            <li>Monitoreo de solicitudes de requerimientos de ingenieria RFI</li>
-        </ul>
-    </div>
-    <div>
-        <h3>Jefe de operaciones y logística</h3>
-        <h4>RyD Montajes</h4>
-        <p>08/2023 - 11/2023</p>
-        <ul>
-            <li>Responsable de la programación y coordinación de transporte.</li>
-            <li>Responsable de la planificación y ejecución de MP y MC</li>
-            <li>Responsable de la coordinación escoltas y cargas especiales</li>
-            <li>Responsable de la organización, estandarización y clasificación de los documentos de equipos, guías de
-                despacho, certificaciones y EDP.
-            </li>
-        </ul>
-    </div>
-    <div>
-        <h3>Encargado de Flota</h3>
-        <h4>Buildtek</h4>
-        <p>03/2022 - 12/2022</p>
-        <ul>
-            <li>Responsable logístico de 3 proyectos adjudicados por BTK en minera
-                escondida.</li>
-            <li>Responsable de los procesos de mantenimiento programado y correctivo,
-                coordinación con proveedores, control de stock, Transporte de materiales y
-                EDP.</li>
-            <li>Responsable de la continuidad operacional del estado de los equipos de móviles y
-                estacionarios</li>
-        </ul>
     </div>
 
+    <div class=" separatorLine mt-3 mb-3 " id="resumeLink"></div>
 
-    <div>
-        <h3>Ingeniero de Planificación</h3>
-        <h4>Komatsu Chile</h4>
-        <p>03/2021 - 11/2021</p>
-        <ul>
-            <li>Responsable de la definición y cumplimiento de planificación semanal de
-                reparaciones y mantenimiento de equipos de construcción y forestal,
-                jerarquizando los trabajos más relevantes y criticidades.
-            </li>
-            <li>Control de gestión de los programadores de servicio y asistente de servicio,
-                seguimiento logístico a través de SAP PM.
-            </li>
-            <li>Responsable de regularización de los servicios de garantias y campañas.</li>
-        </ul>
-    </div>
+    <div class="container text-center m-0">
+        <div class="row ">
+            <!-- col 1 -->
+            <div class="col text-start p-0 pr-5">
+                <h2>EXPERIENCIA</h2>
 
-    <div>
-        <h3>Programador de Servicios</h3>
-        <h4>Komatsu Chile</h4>
-        <p>12/2019 - 02/2021</p>
-        <ul>
-            <li>Gestionar la disponibilidad de materiales e insumos de mantenimiento, para
-                coordinación logística de entrega a cliente o servicio de ejecución de
-                mantenimiento en faenas mineras.
-            </li>
-            <li>Monitoreo de flota de 750 equipos de construcción y forestal a través de
-                SAP PM, KOMTRAX, GPS y apoyo de softwares Microsoft para la
-                implementación de informes semanales y reportes a casa central, con metas
-                en el 80% de cumplimiento.
-            </li>
-            <li>Gestionar HH's disponibles buscando la máxima optimización.</li>
-        </ul>
-    </div>
-
-    <div>
-        <h3>Técnico Mecánico</h3>
-        <h4>Komatsu Chile</h4>
-        <p>05/2018 - 11/2019</p>
-        <ul>
-            <li>Responsable de la ejecución de trabajos planificados, cumpliendo 100% con
-                las normas de seguridad.</li>
-            <li>Evaluar condiciones de fallas de equipos de construcción de forestal a
-                través de ShopManual, planos hidráulicos y eléctricos internos de la
-                compañía.</li>
-            <li>Realizar overhaul de módulos de potencia sobre 20 toneladas CAEX 930E.</li>
-        </ul>
-    </div>
-
-    <div>
-        <h3>Tornero</h3>
-        <h4>Tecnoelectrica Valparaiso</h4>
-        <p>03/2014 - 08/2014</p>
-        <ul>
-            <li>Mecanizado, rectificado de componentes, confección de ejes, chaveteros,
-                ajustes de baja tolerancia. Mecánica de banco, torneado, fresado y
-                taladrado.</li>
-        </ul>
-    </div>
-
-    <div>
-        <h3>Mecánico Mantenedor (practica)</h3>
-        <h4>Proseal and Tech</h4>
-        <p>11/2013 - 02/2014</p>
-        <ul>
-            <li>Evaluación de componentes de bombas centrifugas caracol, tazón y
-                multietapas.</li>
-            <li>Desarme y ensamblado de bombas centrifugas horizontales y verticales.</li>
-            <li>Informes técnicos de equipos estacionarios.</li>
-        </ul>
-    </div>
+                <div>
+                    <h3>Asistente Otec</h3>
+                    <h4>MPM</h4>
+                    <p>11/2023 - Presente</p>
+                    <ul>
+                        <li>Desarrollo de app para reportabilidad de actividades, en appsheet no-code y soporte de
+                            aplicación.
+                        </li>
+                        <li>Reportabilidad de HH's, entrega de programa de actividades y avances semanal de proyecto
+                        </li>
+                        <li>Monitoreo de insumos y repuestos</li>
+                        <li>Monitoreo de solicitudes de requerimientos de ingenieria RFI</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Jefe de operaciones y logística</h3>
+                    <h4>RyD Montajes</h4>
+                    <p>08/2023 - 11/2023</p>
+                    <ul>
+                        <li>Responsable de la programación y coordinación de transporte.</li>
+                        <li>Responsable de la planificación y ejecución de MP y MC</li>
+                        <li>Responsable de la coordinación escoltas y cargas especiales</li>
+                        <li>Responsable de la organización, estandarización y clasificación de los documentos de
+                            equipos, guías
+                            de
+                            despacho, certificaciones y EDP.
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Encargado de Flota</h3>
+                    <h4>Buildtek</h4>
+                    <p>03/2022 - 12/2022</p>
+                    <ul>
+                        <li>Responsable logístico de 3 proyectos adjudicados por BTK en minera
+                            escondida.</li>
+                        <li>Responsable de los procesos de mantenimiento programado y correctivo,
+                            coordinación con proveedores, control de stock, Transporte de materiales y
+                            EDP.</li>
+                        <li>Responsable de la continuidad operacional del estado de los equipos de móviles y
+                            estacionarios</li>
+                    </ul>
+                </div>
 
 
-    <h2>EDUCACIÓN</h2>
-    <ol>
-        <li>
-            <div>
-                <h3>Programación Básica Golang</h3>
-                <h4>Platzi</h4>
-                <p>12/2021 - 12/2022</p>
+                <div>
+                    <h3>Ingeniero de Planificación</h3>
+                    <h4>Komatsu Chile</h4>
+                    <p>03/2021 - 11/2021</p>
+                    <ul>
+                        <li>Responsable de la definición y cumplimiento de planificación semanal de
+                            reparaciones y mantenimiento de equipos de construcción y forestal,
+                            jerarquizando los trabajos más relevantes y criticidades.
+                        </li>
+                        <li>Control de gestión de los programadores de servicio y asistente de servicio,
+                            seguimiento logístico a través de SAP PM.
+                        </li>
+                        <li>Responsable de regularización de los servicios de garantias y campañas.</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Programador de Servicios</h3>
+                    <h4>Komatsu Chile</h4>
+                    <p>12/2019 - 02/2021</p>
+                    <ul>
+                        <li>Gestionar la disponibilidad de materiales e insumos de mantenimiento, para
+                            coordinación logística de entrega a cliente o servicio de ejecución de
+                            mantenimiento en faenas mineras.
+                        </li>
+                        <li>Monitoreo de flota de 750 equipos de construcción y forestal a través de
+                            SAP PM, KOMTRAX, GPS y apoyo de softwares Microsoft para la
+                            implementación de informes semanales y reportes a casa central, con metas
+                            en el 80% de cumplimiento.
+                        </li>
+                        <li>Gestionar HH's disponibles buscando la máxima optimización.</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Técnico Mecánico</h3>
+                    <h4>Komatsu Chile</h4>
+                    <p>05/2018 - 11/2019</p>
+                    <ul>
+                        <li>Responsable de la ejecución de trabajos planificados, cumpliendo 100% con
+                            las normas de seguridad.</li>
+                        <li>Evaluar condiciones de fallas de equipos de construcción de forestal a
+                            través de ShopManual, planos hidráulicos y eléctricos internos de la
+                            compañía.</li>
+                        <li>Realizar overhaul de módulos de potencia sobre 20 toneladas CAEX 930E.</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Tornero</h3>
+                    <h4>Tecnoelectrica Valparaiso</h4>
+                    <p>03/2014 - 08/2014</p>
+                    <ul>
+                        <li>Mecanizado, rectificado de componentes, confección de ejes, chaveteros,
+                            ajustes de baja tolerancia. Mecánica de banco, torneado, fresado y
+                            taladrado.</li>
+                    </ul>
+                </div>
+
+                <div>
+                    <h3>Mecánico Mantenedor (practica)</h3>
+                    <h4>Proseal and Tech</h4>
+                    <p>11/2013 - 02/2014</p>
+                    <ul>
+                        <li>Evaluación de componentes de bombas centrifugas caracol, tazón y
+                            multietapas.</li>
+                        <li>Desarme y ensamblado de bombas centrifugas horizontales y verticales.</li>
+                        <li>Informes técnicos de equipos estacionarios.</li>
+                    </ul>
+                </div>
             </div>
-        </li>
-        <li>
-            <h3>Ingeniería Mecánica en Mantenimiento Industrial</h3>
-            <h4>Universidad Tecnológica de Chile Inacap</h4>
-            <p>03/2015 - 12/2021</p>
-        </li>
-        <li>
-            <h3>Mecánica Industrial</h3>
-            <h4>Escuela industrial Superior de Valparaíso</h4>
-            <p>03/2012 - 02/2014</p>
+            <!-- col 2 -->
+            <div class="col text-start ml-5">
+                <h2>EDUCACIÓN</h2>
+                <ol>
+                    <li>
+                        <div>
+                            <h3>Programación Básica Golang</h3>
+                            <h4>Platzi</h4>
+                            <p>12/2021 - 12/2022</p>
+                        </div>
+                    </li>
+                    <li>
+                        <h3>Ingeniería Mecánica en Mantenimiento Industrial</h3>
+                        <h4>Universidad Tecnológica de Chile Inacap</h4>
+                        <p>03/2015 - 12/2021</p>
+                    </li>
+                    <li>
+                        <h3>Mecánica Industrial</h3>
+                        <h4>Escuela industrial Superior de Valparaíso</h4>
+                        <p>03/2012 - 02/2014</p>
 
-        </li>
+                    </li>
 
-    </ol>
+                </ol>
 
-    <h2>HABILIDADES</h2>
-    <div>
-        <ol>
-            <li>Trabajo en Equipo</li>
-            <li>Ofimatica</li>
-            <li>Capacidad de Análisis</li>
-            <li>Tolerancia Trabajo a Presión</li>
-        </ol>
-    </div>
+                <h2>Habilidades</h2>
+                <div>
+                    <ol>
+                        <li>Trabajo en Equipo</li>
+                        <li>Ofimatica</li>
+                        <li>Capacidad de Análisis</li>
+                        <li>Tolerancia Trabajo a Presión</li>
+                    </ol>
+                </div>
 
-    <h2>IDIOMAS</h2>
-    <ol>
-        <li>Español</li>
-        <li>Ingles</li>
-    </ol>
-    <!-- bootsTrapJS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
-    <script src="https://kit.fontawesome.com/75bf9c57d9.js" crossorigin="anonymous"> </script>
+                <h2>Idiomas</h2>
+                <ol>
+                    <li>Español</li>
+                    <li>Ingles</li>
+                </ol>
+
+            </div>
+        </div>
+
+
+
+        <!-- bootsTrapJS -->
+        <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+            </script>
+        <script src="https://kit.fontawesome.com/75bf9c57d9.js" crossorigin="anonymous"> </script>
 
 </body>
 
