fixing body structure

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link fw-light text-white item-text" href="#aboutLink">Sobre mí</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-light text-white" href="#briefcaseLink">Portafolios</a>
+                        <a class="nav-link fw-light text-white" href="#portfolioLink">Portafolios</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fw-light text-white" href="#contacLink">Contacto</a>
@@ -58,8 +58,9 @@
         </div>
     </header>
     <div class=" separatorLine mt-1 mb-3 "></div>
-    <div>
-        <div class="container text-start m-0 p-5 ">
+    <div
+        class="d-flex justify-content-evenly justify-content-sm-evenly justify-content-md-evenly justify-content-lg-evenly justify-content-xl-evenly justify-content-xxl-evenly">
+        <div class="container text-start m-0 pt-5 pb-5 ">
             <div class="row">
                 <div class="col-6 ">
                     <h1>Alexander Maverick Gutiérrez Ulloa</h1>
@@ -76,7 +77,7 @@
                 </div>
                 <div class="col "></div>
                 <div class="col-4 pt-5 ">
-                    <div class="text-start p-4 ml-5">
+                    <div class=" p-4 ml-5">
                         <div class="p-1 contact">
                             <i class="fa-solid fa-location-dot"></i> Antofagasta, Chile
                         </div>
@@ -84,7 +85,11 @@
                             <i class="fa-solid fa-envelope"></i> amaverick.gutierrez@gmail.com
                         </div>
                         <div class="p-1 contact">
-                            <i class="fa fa-whatsapp" aria-hidden="true"> <a href=""></a></i> +56-958740289
+                            <i class="fa fa-whatsapp text-success fw-bolder fs-5" aria-hidden="true"> <a
+                                    href=""></a></i>
+                            <a id="linkStyle" class="contact"
+                                href="https://api.whatsapp.com/send?phone=56958740289&text=Hola, acabo de ver tu cv"
+                                target="_blank" rel="noopener noreferrer">+569 5874 0289</a>
                         </div>
                         <div class="p-1 contact">
                             <i class="fa-solid fa-user"></i> 27 años
@@ -103,172 +108,175 @@
 
     <div class=" separatorLine mt-3 mb-3 " id="resumeLink"></div>
 
-    <div class="container text-center m-0">
-        <div class="row ">
-            <!-- col 1 -->
-            <div class="col text-start p-0 pr-5">
-                <h2>EXPERIENCIA</h2>
+    <div
+        class=" d-flex justify-content-evenly justify-content-sm-evenly justify-content-md-evenly justify-content-lg-evenly justify-content-xl-evenly justify-content-xxl-evenly ">
+        <div class=" container  pt-5 pb-5 ">
+            <div class="row ">
+                <!-- col 1 -->
+                <div class="col-4 ">EXPERIENCIA</h2>
+                    <div>
+                        <h3 class="experienceSizeText">Asistente Otec</h3>
+                        <h4 class="experienceSizeText">MPM</h4>
+                        <p>11/2023 - Presente</p>
+                        <ul>
+                            <li>Desarrollo de app para reportabilidad de actividades, en appsheet no-code y soporte de
+                                aplicación.
+                            </li>
+                            <li>Reportabilidad de HH's, entrega de programa de actividades y avances semanal de proyecto
+                            </li>
+                            <li>Monitoreo de insumos y repuestos</li>
+                            <li>Monitoreo de solicitudes de requerimientos de ingenieria RFI</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="experienceSizeText">Jefe de operaciones y logística</h3>
+                        <h4 class="experienceSizeText">RyD Montajes</h4>
+                        <p>08/2023 - 11/2023</p>
+                        <ul>
+                            <li>Responsable de la programación y coordinación de transporte.</li>
+                            <li>Responsable de la planificación y ejecución de MP y MC</li>
+                            <li>Responsable de la coordinación escoltas y cargas especiales</li>
+                            <li>Responsable de la organización, estandarización y clasificación de los documentos de
+                                equipos, guías
+                                de
+                                despacho, certificaciones y EDP.
+                            </li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3 class="experienceSizeText">Encargado de Flota</h3>
+                        <h4 class="experienceSizeText">Buildtek</h4>
+                        <p>03/2022 - 12/2022</p>
+                        <ul>
+                            <li>Responsable logístico de 3 proyectos adjudicados por BTK en minera
+                                escondida.</li>
+                            <li>Responsable de los procesos de mantenimiento programado y correctivo,
+                                coordinación con proveedores, control de stock, Transporte de materiales y
+                                EDP.</li>
+                            <li>Responsable de la continuidad operacional del estado de los equipos de móviles y
+                                estacionarios</li>
+                        </ul>
+                    </div>
 
-                <div>
-                    <h3>Asistente Otec</h3>
-                    <h4>MPM</h4>
-                    <p>11/2023 - Presente</p>
+
+                    <div>
+                        <h3 class="experienceSizeText">Ingeniero de Planificación</h3>
+                        <h4 class="experienceSizeText">Komatsu Chile</h4>
+                        <p>03/2021 - 11/2021</p>
+                        <ul>
+                            <li>Responsable de la definición y cumplimiento de planificación semanal de
+                                reparaciones y mantenimiento de equipos de construcción y forestal,
+                                jerarquizando los trabajos más relevantes y criticidades.
+                            </li>
+                            <li>Control de gestión de los programadores de servicio y asistente de servicio,
+                                seguimiento logístico a través de SAP PM.
+                            </li>
+                            <li>Responsable de regularización de los servicios de garantias y campañas.</li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h3 class="experienceSizeText">Programador de Servicios</h3>
+                        <h4 class="experienceSizeText">Komatsu Chile</h4>
+                        <p>12/2019 - 02/2021</p>
+                        <ul>
+                            <li>Gestionar la disponibilidad de materiales e insumos de mantenimiento, para
+                                coordinación logística de entrega a cliente o servicio de ejecución de
+                                mantenimiento en faenas mineras.
+                            </li>
+                            <li>Monitoreo de flota de 750 equipos de construcción y forestal a través de
+                                SAP PM, KOMTRAX, GPS y apoyo de softwares Microsoft para la
+                                implementación de informes semanales y reportes a casa central, con metas
+                                en el 80% de cumplimiento.
+                            </li>
+                            <li>Gestionar HH's disponibles buscando la máxima optimización.</li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h3 class="experienceSizeText">Técnico Mecánico</h3>
+                        <h4 class="experienceSizeText">Komatsu Chile</h4>
+                        <p>05/2018 - 11/2019</p>
+                        <ul>
+                            <li>Responsable de la ejecución de trabajos planificados, cumpliendo 100% con
+                                las normas de seguridad.</li>
+                            <li>Evaluar condiciones de fallas de equipos de construcción de forestal a
+                                través de ShopManual, planos hidráulicos y eléctricos internos de la
+                                compañía.</li>
+                            <li>Realizar overhaul de módulos de potencia sobre 20 toneladas CAEX 930E.</li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h3 class="experienceSizeText">Tornero</h3>
+                        <h4 class="experienceSizeText">Tecnoelectrica Valparaiso</h4>
+                        <p>03/2014 - 08/2014</p>
+                        <ul>
+                            <li>Mecanizado, rectificado de componentes, confección de ejes, chaveteros,
+                                ajustes de baja tolerancia. Mecánica de banco, torneado, fresado y
+                                taladrado.</li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h3 class="experienceSizeText">Mecánico Mantenedor (practica)</h3>
+                        <h4 class="experienceSizeText">Proseal and Tech</h4>
+                        <p>11/2013 - 02/2014</p>
+                        <ul>
+                            <li>Evaluación de componentes de bombas centrifugas caracol, tazón y
+                                multietapas.</li>
+                            <li>Desarme y ensamblado de bombas centrifugas horizontales y verticales.</li>
+                            <li>Informes técnicos de equipos estacionarios.</li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- col 2 -->
+                <div class="col-8 ml-5">
+                    <h2 class="educationSizeText">EDUCACIÓN</h2>
                     <ul>
-                        <li>Desarrollo de app para reportabilidad de actividades, en appsheet no-code y soporte de
-                            aplicación.
+                        <li>
+                            <div>
+                                <h3 class="educationSizeText">Programación Básica Golang</h3>
+                                <h4 class="educationSizeText">Platzi</h4>
+                                <p class="educationSizeText">12/2021 - 12/2022</p>
+                            </div>
                         </li>
-                        <li>Reportabilidad de HH's, entrega de programa de actividades y avances semanal de proyecto
+                        <li>
+                            <h3 class="educationSizeText">Ingeniería Mecánica en Mantenimiento Industrial</h3>
+                            <h4 class="educationSizeText">Universidad Tecnológica de Chile Inacap</h4>
+                            <p>03/2015 - 12/2021</p>
                         </li>
-                        <li>Monitoreo de insumos y repuestos</li>
-                        <li>Monitoreo de solicitudes de requerimientos de ingenieria RFI</li>
-                    </ul>
-                </div>
-                <div>
-                    <h3>Jefe de operaciones y logística</h3>
-                    <h4>RyD Montajes</h4>
-                    <p>08/2023 - 11/2023</p>
-                    <ul>
-                        <li>Responsable de la programación y coordinación de transporte.</li>
-                        <li>Responsable de la planificación y ejecución de MP y MC</li>
-                        <li>Responsable de la coordinación escoltas y cargas especiales</li>
-                        <li>Responsable de la organización, estandarización y clasificación de los documentos de
-                            equipos, guías
-                            de
-                            despacho, certificaciones y EDP.
+                        <li>
+                            <h3 class="educationSizeText">Mecánica Industrial</h3>
+                            <h4 class="educationSizeText">Escuela industrial Superior de Valparaíso</h4>
+                            <p>03/2012 - 02/2014</p>
+
                         </li>
+
                     </ul>
-                </div>
-                <div>
-                    <h3>Encargado de Flota</h3>
-                    <h4>Buildtek</h4>
-                    <p>03/2022 - 12/2022</p>
+
+                    <h2 class="educationSizeText">Habilidades</h2>
+                    <div>
+                        <ul>
+                            <li>Trabajo en Equipo</li>
+                            <li>Ofimatica</li>
+                            <li>Capacidad de Análisis</li>
+                            <li>Tolerancia Trabajo a Presión</li>
+                        </ul>
+                    </div>
+
+                    <h2 class="educationSizeText">Idiomas</h2>
                     <ul>
-                        <li>Responsable logístico de 3 proyectos adjudicados por BTK en minera
-                            escondida.</li>
-                        <li>Responsable de los procesos de mantenimiento programado y correctivo,
-                            coordinación con proveedores, control de stock, Transporte de materiales y
-                            EDP.</li>
-                        <li>Responsable de la continuidad operacional del estado de los equipos de móviles y
-                            estacionarios</li>
+                        <li>Español</li>
+                        <li>Ingles</li>
                     </ul>
+
                 </div>
-
-
-                <div>
-                    <h3>Ingeniero de Planificación</h3>
-                    <h4>Komatsu Chile</h4>
-                    <p>03/2021 - 11/2021</p>
-                    <ul>
-                        <li>Responsable de la definición y cumplimiento de planificación semanal de
-                            reparaciones y mantenimiento de equipos de construcción y forestal,
-                            jerarquizando los trabajos más relevantes y criticidades.
-                        </li>
-                        <li>Control de gestión de los programadores de servicio y asistente de servicio,
-                            seguimiento logístico a través de SAP PM.
-                        </li>
-                        <li>Responsable de regularización de los servicios de garantias y campañas.</li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3>Programador de Servicios</h3>
-                    <h4>Komatsu Chile</h4>
-                    <p>12/2019 - 02/2021</p>
-                    <ul>
-                        <li>Gestionar la disponibilidad de materiales e insumos de mantenimiento, para
-                            coordinación logística de entrega a cliente o servicio de ejecución de
-                            mantenimiento en faenas mineras.
-                        </li>
-                        <li>Monitoreo de flota de 750 equipos de construcción y forestal a través de
-                            SAP PM, KOMTRAX, GPS y apoyo de softwares Microsoft para la
-                            implementación de informes semanales y reportes a casa central, con metas
-                            en el 80% de cumplimiento.
-                        </li>
-                        <li>Gestionar HH's disponibles buscando la máxima optimización.</li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3>Técnico Mecánico</h3>
-                    <h4>Komatsu Chile</h4>
-                    <p>05/2018 - 11/2019</p>
-                    <ul>
-                        <li>Responsable de la ejecución de trabajos planificados, cumpliendo 100% con
-                            las normas de seguridad.</li>
-                        <li>Evaluar condiciones de fallas de equipos de construcción de forestal a
-                            través de ShopManual, planos hidráulicos y eléctricos internos de la
-                            compañía.</li>
-                        <li>Realizar overhaul de módulos de potencia sobre 20 toneladas CAEX 930E.</li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3>Tornero</h3>
-                    <h4>Tecnoelectrica Valparaiso</h4>
-                    <p>03/2014 - 08/2014</p>
-                    <ul>
-                        <li>Mecanizado, rectificado de componentes, confección de ejes, chaveteros,
-                            ajustes de baja tolerancia. Mecánica de banco, torneado, fresado y
-                            taladrado.</li>
-                    </ul>
-                </div>
-
-                <div>
-                    <h3>Mecánico Mantenedor (practica)</h3>
-                    <h4>Proseal and Tech</h4>
-                    <p>11/2013 - 02/2014</p>
-                    <ul>
-                        <li>Evaluación de componentes de bombas centrifugas caracol, tazón y
-                            multietapas.</li>
-                        <li>Desarme y ensamblado de bombas centrifugas horizontales y verticales.</li>
-                        <li>Informes técnicos de equipos estacionarios.</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- col 2 -->
-            <div class="col text-start ml-5">
-                <h2>EDUCACIÓN</h2>
-                <ol>
-                    <li>
-                        <div>
-                            <h3>Programación Básica Golang</h3>
-                            <h4>Platzi</h4>
-                            <p>12/2021 - 12/2022</p>
-                        </div>
-                    </li>
-                    <li>
-                        <h3>Ingeniería Mecánica en Mantenimiento Industrial</h3>
-                        <h4>Universidad Tecnológica de Chile Inacap</h4>
-                        <p>03/2015 - 12/2021</p>
-                    </li>
-                    <li>
-                        <h3>Mecánica Industrial</h3>
-                        <h4>Escuela industrial Superior de Valparaíso</h4>
-                        <p>03/2012 - 02/2014</p>
-
-                    </li>
-
-                </ol>
-
-                <h2>Habilidades</h2>
-                <div>
-                    <ol>
-                        <li>Trabajo en Equipo</li>
-                        <li>Ofimatica</li>
-                        <li>Capacidad de Análisis</li>
-                        <li>Tolerancia Trabajo a Presión</li>
-                    </ol>
-                </div>
-
-                <h2>Idiomas</h2>
-                <ol>
-                    <li>Español</li>
-                    <li>Ingles</li>
-                </ol>
-
             </div>
         </div>
+        <section id="portfolioLink">
 
+        </section>
 
 
         <!-- bootsTrapJS -->
