--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body class="bg-dark bg-gradient" data-bs-theme="dark">
+<body class="bg-secondary-emphasis bg-gradient" data-bs-theme="dark">
 
     <!-- navbar style -->
     <nav class="navbar sticky-top navbar-expand-lg bg-black bg-gradient">
@@ -34,7 +34,7 @@
                         <a class="nav-link fw-light text-white" href="#portfolioLink">Portafolios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link fw-light text-white" href="#contacLink">Contacto</a>
+                        <a class="nav-link fw-light text-white" href="#contactLink">Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link fw-light text-white" href="#resumeLink">Curriculum</a>
@@ -57,11 +57,11 @@
             </div>
         </div>
     </header>
-    <div class=" separatorLine mt-1 mb-3 "></div>
+    <div class=" separatorLine mt-1 mb-3 " id="contactLink"></div>
     <div
         class="d-flex justify-content-evenly justify-content-sm-evenly justify-content-md-evenly justify-content-lg-evenly justify-content-xl-evenly justify-content-xxl-evenly">
         <div class="container text-start m-0 pt-5 pb-5 ">
-            <div class="row">
+            <div class="row ">
                 <div class="col-6 ">
                     <h1>Alexander Maverick Gutiérrez Ulloa</h1>
                     <div class="col mt-5 pr">
@@ -108,14 +108,13 @@
 
     <div class=" separatorLine mt-3 mb-3 " id="resumeLink"></div>
 
-    <div
-        class=" d-flex justify-content-evenly justify-content-sm-evenly justify-content-md-evenly justify-content-lg-evenly justify-content-xl-evenly justify-content-xxl-evenly ">
-        <div class=" container  pt-5 pb-5 ">
-            <div class="row ">
+    <div class="d-flex justify-content-evenly">
+        <div class=" container pt-5 pb-5 ">
+            <div class=" row ">
                 <!-- col 1 -->
                 <div class="col-4 ">EXPERIENCIA</h2>
                     <div>
-                        <h3 class="experienceSizeText">Asistente Otec</h3>
+                        <h3 class=" experienceSizeText">Asistente Otec</h3>
                         <h4 class="experienceSizeText">MPM</h4>
                         <p>11/2023 - Presente</p>
                         <ul>
@@ -157,7 +156,6 @@
                                 estacionarios</li>
                         </ul>
                     </div>
-
 
                     <div>
                         <h3 class="experienceSizeText">Ingeniero de Planificación</h3>
@@ -230,8 +228,11 @@
                         </ul>
                     </div>
                 </div>
+                <div class="col "></div>
+
                 <!-- col 2 -->
-                <div class="col-8 ml-5">
+
+                <div class="col ml-5">
                     <h2 class="educationSizeText">EDUCACIÓN</h2>
                     <ul>
                         <li>
@@ -250,9 +251,7 @@
                             <h3 class="educationSizeText">Mecánica Industrial</h3>
                             <h4 class="educationSizeText">Escuela industrial Superior de Valparaíso</h4>
                             <p>03/2012 - 02/2014</p>
-
                         </li>
-
                     </ul>
 
                     <h2 class="educationSizeText">Habilidades</h2>
@@ -262,6 +261,7 @@
                             <li>Ofimatica</li>
                             <li>Capacidad de Análisis</li>
                             <li>Tolerancia Trabajo a Presión</li>
+                            <li>Adaptabilidad a los cambios</li>
                         </ul>
                     </div>
 
@@ -274,16 +274,60 @@
                 </div>
             </div>
         </div>
-        <section id="portfolioLink">
+    </div>
+    <div class=" separatorLine mt-3 mb-3 " id="resumeLink"></div>
 
-        </section>
+    <!-- Portfolio -->
+    <section id="portfolioLink" class=" d-flex justify-content-center pt-5 pb-5">
+        <div id="carouselExampleIndicators" class="carousel slide ">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/designPortfolioen.jpg" class="d-block w-70 " alt="example 1">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/designPortfolioen.jpg" class="d-block w-70" alt="example 2">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/designPortfolioen.jpg" class="d-block w-70" alt="example 3">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+    <div class=" separatorLine mt-3 mb-3 " id="resumeLink"></div>
+
+    <!-- footer -->
+    <section class="footer text-center">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque molestias quasi culpa quidem corporis error.
+        </p>
+        <i class="fa fa-github text-primary fs-3" aria-hidden="true"></i>
+        <a id="linkStyle" class="contact" href="https://github.com/AlexanderMaverick" target="_blank"
+            rel="noopener noreferrer">Github</a>
+    </section>
 
 
-        <!-- bootsTrapJS -->
-        <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-            </script>
-        <script src="https://kit.fontawesome.com/75bf9c57d9.js" crossorigin="anonymous"> </script>
+    <!-- bootsTrapJS -->
+    <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
+    <script src="https://kit.fontawesome.com/75bf9c57d9.js" crossorigin="anonymous"> </script>
 
 </body>
 
