--- a/index.html
+++ b/index.html
@@ -47,17 +47,21 @@
     <!-- header -->
 
     <header class="header">
-        <img src="assets/img/navBarItMechanical.jpg" class="img-fluid backgroundImgSettings"
-            alt="background header img">
+        <img src="assets/img/topIMG.png" class="img-fluid backgroundImgSettings " alt="background header img">
         <div class="container text-start mr-5 m-0 ">
             <div class="row ">
                 <div class="col ">
-                    <img id="profile-picture" src="/assets/img/pictureProfile.jpg" alt="resume profile picture"></img>
+                    <img id="profile-picture" src="/assets/img/pictureProfile.jpg" class="img-fluid"
+                        alt="resume profile picture"></img>
                 </div>
             </div>
         </div>
     </header>
-    <div class=" separatorLine mt-1 mb-3 " id="contactLink"></div>
+    <div class="separatorLineBlockSize">
+        <div class=" separatorLine my-5 " id="contactLink"></div>
+
+    </div>
+
     <div
         class="d-flex justify-content-evenly justify-content-sm-evenly justify-content-md-evenly justify-content-lg-evenly justify-content-xl-evenly justify-content-xxl-evenly">
         <div class="container text-start m-0 pt-5 pb-5 ">
@@ -105,8 +109,10 @@
             </div>
         </div>
     </div>
+    <div class="separatorLineBlockSize">
 
-    <div class=" separatorLine mt-3 mb-3 " id="resumeLink"></div>
+        <div class=" separatorLine my-3 " id=""></div>
+    </div>
 
     <div class="d-flex justify-content-evenly">
         <div class=" container pt-5 pb-5 ">
@@ -275,43 +281,41 @@
             </div>
         </div>
     </div>
-    <div class=" separatorLine mt-3 mb-3 " id="resumeLink"></div>
+    <div class="separatorLineBlockSize">
+        <div class=" separatorLine my-3 " id=""></div>
+
+    </div>
 
     <!-- Portfolio -->
-    <section id="portfolioLink" class=" d-flex justify-content-center pt-5 pb-5">
-        <div id="carouselExampleIndicators" class="carousel slide ">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/img/designPortfolioen.jpg" class="d-block w-70 " alt="example 1">
+    <section id="portfolioLink" class=" justify-content-center pt-5 pb-5">
+
+        <div class="container text-center">
+            <div class="row">
+                <div class="col">
+                    <img src="assets/img/alexanderResume.jpg" class="imgCarouselSettings img-fluid h-100"
+                        alt="portfolio img-1">
                 </div>
-                <div class="carousel-item">
-                    <img src="assets/img/designPortfolioen.jpg" class="d-block w-70" alt="example 2">
+                <div class="col">
+                    <img src="assets/img/desafioCuppon.png" class="imgCarouselSettings img-fluid h-100"
+                        alt="portfolio img-2">
                 </div>
-                <div class="carousel-item">
-                    <img src="assets/img/designPortfolioen.jpg" class="d-block w-70" alt="example 3">
+
+                <div class="col">
+                    <img src="assets/img/iguanaPage.png" class="imgCarouselSettings img-fluid h-100"
+                        alt="portfolio img-3">
                 </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
+
+                <div class="col">
+                    <img src="assets/img/landingPAge.png" class="imgCarouselSettings img-fluid h-100"
+                        alt="portfolio img-4">
+                </div>
+
     </section>
-    <div class=" separatorLine mt-3 mb-3 " id="resumeLink"></div>
+
+    <div class="separatorLineBlockSize m-0 p-0 b-0">
+        <div class=" separatorLine my-3 " id=""></div>
+
+    </div>
 
     <!-- footer -->
     <section class="footer text-center">
