--- a/index.html
+++ b/index.html
@@ -291,16 +291,16 @@
 
         <div class="container text-center">
             <div class="row">
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <img src="assets/img/alexanderResume.jpg" class="imgCarouselSettings img-fluid h-100"
                         alt="portfolio img-1">
                 </div>
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <img src="assets/img/desafioCuppon.png" class="imgCarouselSettings img-fluid h-100"
                         alt="portfolio img-2">
                 </div>
 
-                <div class="col">
+                <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <img src="assets/img/iguanaPage.png" class="imgCarouselSettings img-fluid h-100"
                         alt="portfolio img-3">
                 </div>
