adding link in index

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                                     href=""></a></i>
                             <a id="linkStyle" class="contact"
                                 href="https://api.whatsapp.com/send?phone=56958740289&text=Hola, acabo de ver tu cv"
-                                target="_blank" rel="noopener noreferrer">+569 5874 0289</a>
+                                target="_blank" rel="noopener noreferrer">+569 5874 0289</a> <i
+                                class="fa-solid fa-link"></i>
                         </div>
                         <div class="p-1 contact">
                             <i class="fa-solid fa-user"></i> 27 años
@@ -102,7 +103,7 @@
                             <i class="fa-brands fa-linkedin text-primary"></i>
                             <a id="linkStyle" class="contact"
                                 href="https://www.linkedin.com/in/alexander-maverick-gutierrez-ulloa-812641181/"
-                                target="_blank" rel="noopener noreferrer">Linkedin</a>
+                                target="_blank" rel="noopener noreferrer">Linkedin</a> <i class="fa-solid fa-link"></i>
                         </div>
                     </div>
                 </div>
