Se modifica whatsapp

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <i class="fa fa-whatsapp text-success fw-bolder fs-5" aria-hidden="true"> <a
                                     href=""></a></i>
                             <a id="linkStyle" class="contact"
-                                href="https://api.whatsapp.com/send?phone=56958740289&text=Hola, acabo de ver tu cv"
+                                href="https://api.whatsapp.com/send?phone=56958740289&text=Hola, acabo de ver tu cv, está excelente"
                                 target="_blank" rel="noopener noreferrer">+569 5874 0289</a> <i
                                 class="fa-solid fa-link"></i>
                         </div>
